--- a/2/round2.html
+++ b/2/round2.html
@@ -2,7 +2,7 @@
 <html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title>选择关卡</title>
+    <title>第二关 - 选择</title>
 </head>
 
 <style>
@@ -53,10 +53,19 @@
 <div class="selectPanel">
     请选择要进行的关卡
     <button class="selectButton" id="btn1">
-        <a class="selectA" href="./1/index.html">第一关</a>
+        <a class="selectA" href="./1/index.html">心</a>
     </button>
     <button class="selectButton" id="btn2">
-        <a class="selectA" href="./2/round2.html">第二关</a>
+        <a class="selectA" href="./2/index.html">肝</a>
+    </button>
+    <button class="selectButton" id="btn3">
+        <a class="selectA" href="./3/index.html">肺</a>
+    </button>
+    <button class="selectButton" id="btn4">
+        <a class="selectA" href="./4/index.html">肾</a>
+    </button>
+    <button class="selectButton" id="btn5">
+        <a class="selectA" href="./5/index.html">脾</a>
     </button>
 </div>
 </body>
